@@ -23,7 +23,9 @@ OSP-Core: New Security UI for Login, Registration, Password Reset, TOTP Configur
 OSP-Core: Corrects a security issue where video metadata could be edited by a non-owning user
 OSP-Core: Corrects an issue where TOTP + "Remember Me" Setting on Login would result in a 500 error
 OSP-Core: Fix for editing a channel which contains a shortcode that causes the short code to be cleared due to a invalid check
+OSP-Core: Fix for RTMP/Edge handling when Adaptive Streams are Enabled - #459
 OSP-RTMP: Changes to Support allowRestream setting in OSP-Core
+OSP-RTMP: Fix for RTMP/Edge handling when Adaptive Streams are Enabled - #459
 
 
 0.8.17
